@@ -15,6 +15,9 @@ Core and Builtins
 Library
 -------
 
+- Issue 5955: aifc's close method did not close the file it wrapped,
+  now it does.  This also means getfp method now returns the real fp.
+
 
 What's New in Python 3.1 beta 1?
 ================================
